* Internet Explorer was displaying the wrong cursor in the meeting results list. This has been fixed. * There was a big issue with text fields not working properly on IE. This has been addressed. Apparently, cloning a DOM node does not properly transfer event handlers in IE. * Removed the now-unnecessary "supports_ajax" argument from the login. * Simplified the login form a bit, so that the URI will remain consistent. * Fixed a bug, in which changing multiple items at once in the "My Account" section triggered a JavaScript error. 2.0a5 Release

--- a/main_server/local_server/server_admin/style/styles.css
+++ b/main_server/local_server/server_admin/style/styles.css
@@ -937,6 +937,7 @@ div.bmlt_admin_meeting_search_results_single_meeting_container_div a.bmlt_admin_
 div.bmlt_admin_meeting_search_results_single_meeting_container_div a.bmlt_admin_meeting_search_results_single_meeting_a span
 {
     display:block;
+    cursor:pointer;
 }
 
 div.bmlt_admin_meeting_search_results_single_meeting_container_div a.bmlt_admin_meeting_search_results_single_meeting_a span
